--- a/.github/workflows/mlops-ci-workflow.yaml
+++ b/.github/workflows/mlops-ci-workflow.yaml
@@ -51,7 +51,7 @@ jobs:
         path: models/trained/preprocessor.pkl
 
   model-training:
-  
+
       needs: data-processing
       runs-on: ubuntu-latest
 
@@ -93,7 +93,7 @@ jobs:
         run: |
           mkdir -p models
           python src/models/train_model.py \
-          --config confifs/model_config.yaml \
+          --config configs/model_config.yaml \
           --data data/processed/features_house_data.csv \
           --models-dir models \
           --mlflow-tracking-uri http://localhost:5000
