fix the ml workflow ci pipeline

--- a/.github/workflows/mlops-ci-workflow.yaml
+++ b/.github/workflows/mlops-ci-workflow.yaml
@@ -111,7 +111,7 @@ jobs:
 
   build-and-publish:
     needs: model-training
-    runs-on: ubuntu 
+    runs-on: ubuntu-latest 
 
     steps:
       
