--- a/.github/workflows/mlops-ci-workflow.yaml
+++ b/.github/workflows/mlops-ci-workflow.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Install depedencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install --default-timeout=800 -r requirements.txt
 
     - name: Process data
       run: |
