--- a/deployment/monitoring/servicemonitor.yaml
+++ b/deployment/monitoring/servicemonitor.yaml
@@ -12,6 +12,7 @@ spec:
     matchNames:
       - default # or your namespace
   endpoints:
-    - port: "8888" # or match name of your service port
-      path: /metrics
+    - port: metrics
+      path: /
       interval: 15s
+      scrapeTimeout: 10s
