--- a/deployment/kubernetes/model-deploy.yaml
+++ b/deployment/kubernetes/model-deploy.yaml
@@ -21,5 +21,12 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8888
-        resources: {}
-status: {}
+        - containerPort: 9100
+        resources:
+          requests:
+            cpu: "50m"
+            memory: "64Mi"
+          limits:
+            cpu: "100m"
+            memory: "128Mi"
+
