--- a/deployment/kubernetes/model-svc.yaml
+++ b/deployment/kubernetes/model-svc.yaml
@@ -11,6 +11,9 @@ spec:
     port: 8888
     protocol: TCP
     targetPort: 8888
+  - name: metrics
+    port: 9100
+    targetPort: 9100
   selector:
     app: model
   type: NodePort
